sample_manifest (13) (1).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'cws-webservices-dev1'
  namespace: 'cws-dev'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: JSESSIONID
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    project: 'cws-webservices'
    commit: 'c6a1b87'
    role: java
    environment: dev1
spec:
  rules:
    - host: 'cws-webservices-dev1.kubemdc-test.corp.intranet'
      http:
        paths:
          - path: /
            backend:
              serviceName: 'cws-webservices-dev1'
              servicePort: 8080
  tls:
    - hosts:
      - 'cws-webservices-dev1.kubemdc-test.corp.intranet'
      secretName: managed-tls-secret
---
---
apiVersion: v1
kind: Service
metadata:
  name: 'cws-webservices-dev1'
  namespace: 'cws-dev'
  labels:
    project: 'cws-webservices'
    commit: 'c6a1b87'
    role: java
    environment: dev1
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    project: 'cws-webservices'
    commit: 'c6a1b87'
    role: java
    environment: dev1
  type: ClusterIP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'cws-webservices-dev1'
  labels:
    project: 'cws-webservices'
    commit: 'c6a1b87'
    role: java
    environment: dev1
spec:
  selector:
    matchLabels:
      project: 'cws-webservices'
      role: java
      environment: dev1
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        project: 'cws-webservices'
        commit: 'c6a1b87'
        role: java
        environment: dev1
    spec:
      containers:
        - name: java
          image: 'nexusprod.corp.intranet:4567/cws/cws-webservices:february-2022'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 5000
              protocol: TCP
          resources:
            limits:
              memory: 2Gi
              cpu: 250m
            requests:
              memory: 1Gi
              cpu: 100m
      imagePullSecrets:
        - name: cws-webservices-pr-null
---
---
